update product apis
